--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,3 +24,5 @@ jobs:
         run: npm ci --legacy-peer-deps
       - name: Check code formatting
         run: npm run prettier:check
+      - name: Run linter
+        run: npm run lint:ci
