--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint",
 		"prettier:check": "prettier -c .",
-		"prettier": "prettier --write ."
+		"prettier": "prettier --write .",
+		"lint": "eslint --ext .ts --ext .tsx . --cache",
+		"lint:ci": "eslint --ext .ts --ext .tsx .",
+		"lint-warn": "eslint --ext .ts --ext .tsx . -c .eslintrc.warn.json"
 	},
 	"dependencies": {
 		"@clerk/nextjs": "^4.29.5",
@@ -41,9 +43,13 @@
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"@typescript-eslint/eslint-plugin": "^6.19.1",
+		"@typescript-eslint/parser": "^6.19.1",
 		"autoprefixer": "^10.0.1",
-		"eslint": "^8",
-		"eslint-config-next": "14.1.0",
+		"eslint": "^8.57.0",
+		"eslint-config-next": "^14.1.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-prettier": "^5.2.1",
 		"postcss": "^8",
 		"prettier": "^3.3.3",
 		"prisma": "^5.9.1",
