--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"prettier": "prettier --write .",
 		"lint": "eslint --ext .ts --ext .tsx . --cache",
 		"lint:ci": "eslint --ext .ts --ext .tsx .",
-		"lint-warn": "eslint --ext .ts --ext .tsx . -c .eslintrc.warn.json"
+		"lint-warn": "eslint --ext .ts --ext .tsx . -c .eslintrc.warn.json",
+		"postinstall": "prisma generate"
 	},
 	"dependencies": {
 		"@clerk/nextjs": "^4.29.5",
