--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "task-manager",
+	"name": "task-hub",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
@@ -16,7 +16,7 @@
 	"dependencies": {
 		"@clerk/nextjs": "^4.29.5",
 		"@hello-pangea/dnd": "^16.6.0",
-		"@prisma/client": "^5.10.2",
+		"@prisma/client": "^5.17.0",
 		"@radix-ui/react-accordion": "^1.1.2",
 		"@radix-ui/react-dialog": "^1.1.1",
 		"@radix-ui/react-label": "^2.1.0",
@@ -53,7 +53,7 @@
 		"eslint-plugin-prettier": "^5.2.1",
 		"postcss": "^8",
 		"prettier": "^3.3.3",
-		"prisma": "^5.9.1",
+		"prisma": "^5.17.0",
 		"tailwindcss": "^3.3.0",
 		"typescript": "^5"
 	}
