--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@radix-ui/react-separator": "^1.0.3",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@tanstack/react-query": "^5.51.9",
+		"@vercel/postgres": "^0.9.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
 		"lodash": "^4.17.21",
